added map and challenge sections

--- a/index.html
+++ b/index.html
@@ -54,6 +54,45 @@
             </div>
         </div>
     </section>
+
+    <!-- Map screen -->
+
+    <section>
+        <div>
+            <p>Svårighetsgrad:</p>
+            <p>Antal stopp:</p>
+            <p>Tid:</p>
+        </div>
+
+        <div>
+            <p>placeholder: karta</p>
+        </div>
+
+        <div>
+            <button>Öppna i Google Maps</button>
+            <p>Framme vid stopp 1?</p>
+            <button>Framme!</button>
+        </div>
+    </section>
+
+    <!-- Challenge screen -->
+     <section>
+        <div>
+            <h1>Stopp 1</h1>
+        </div>
+
+        <div>Image placeholder</div>
+
+        <div>
+            <p>Gör 10 armhävningar mot trädet</p>
+        </div>
+
+        <div>
+            <p>Är du klar med övningen?</p>
+            <button>Klar!</button>
+        </div>
+
+     </section>
     
 </body>
 </html>
