added final screen

--- a/index.html
+++ b/index.html
@@ -91,8 +91,14 @@
             <p>Är du klar med övningen?</p>
             <button>Klar!</button>
         </div>
-
      </section>
+
+     <!-- Final screen -->
+      <section>
+        <h1>Grattis du klarade det!</h1>
+        <p>Antal stopp:</p>
+        <p>Tidsåtgång:</p>
+      </section>
     
 </body>
 </html>
