--- a/index.html
+++ b/index.html
@@ -173,6 +173,11 @@
           <h1>Lindholmen Runt</h1>
         </div>
 
+        <!-- Time -->
+
+        <div class="time-container">
+          <span class="time">00:00</span>
+          </div>
         <!-- Instruction text -->
         <div class="map-instruction">
           Gå till Lindholmspiren
@@ -188,14 +193,6 @@
           <p class="arrival-instruction">Tryck när du är framme vid nästa stopp</p>
           <button class="arrival-btn" id="arrived-btn">Jag är framme</button>
           <a href="#" class="cancel-link" id="cancel-link">Avbryt</a>
-          
-          <!-- Trail toggle -->
-          <div class="trail-controls">
-            <label>
-              <input type="checkbox" id="show-trail" checked>
-              Visa rutt-spår
-            </label>
-          </div>
         </div>
       </div>
     </section>
