styled challenge screen and removed unecessary things

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     />
   </head>
   <body>
-    
+
     <!-- Header with logo and title -->
     <header>
       <svg
@@ -169,21 +169,22 @@
     <section class="screen" id="challenge-screen">
       <div class="challenge-container">
         <div class="challenge-header">
-          <h1 id="challenge-title">Stopp 1</h1>
-        </div>
-
-        <div class="challenge-image" id="challenge-image">
-          🏃‍♂️
+          <h1 id="challenge-title" class="bold"></h1>
         </div>
 
         <div class="challenge-description">
-          <h2 id="challenge-name">Övning</h2>
           <p id="challenge-text">Gör övningen enligt instruktionen</p>
         </div>
 
+        <div class="challenge-image" id="challenge-image">
+          <img src="/" alt="">
+        </div>
+
+
         <div class="challenge-actions">
-          <p>Är du klar med övningen?</p>
-          <button class="challenge-done-btn" id="done-btn">Klar!</button>
+          <p>Tryck när du har utfört övningen</p>
+          <button class="challenge-done-btn" id="done-btn">Jag är klar</button>
+          <a href="#" class="cancel-link" id="cancel-link">Avbryt</a>
         </div>
       </div>
     </section>
