--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lindholmen Runt</title>
+    <link rel="icon" type="image/x-icon" href="/assets/tab_icon.png">
 
     <link rel="stylesheet" href="/styles/main-styles.css" />
     <link rel="stylesheet" href="styles/styles.css" />
