--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
         <!-- Bottom section with button and cancel -->
         <div class="map-bottom-section">
-          <p class="arrival-instruction">Tryck när du är framme vid platsen</p>
+          <p class="arrival-instruction">När du är framme, tryck på “Visa övning“</p>
           <button class="arrival-btn" id="arrived-btn">Visa övning</button>
           <a href="#" class="cancel-link" id="cancel-link">Avbryt</a>
         </div>
@@ -184,8 +184,8 @@
         </div>
 
         <div class="challenge-actions">
-          <p>Tryck när du har utfört övningen</p>
-          <button class="challenge-done-btn" id="done-btn">Jag är klar</button>
+          <p>När du har utfört övningen, tryck på “Klar”</p>
+          <button class="challenge-done-btn" id="done-btn">Klar</button>
           <a href="#" class="cancel-link" id="cancel-link">Avbryt</a>
         </div>
       </div>
