added gif and adjusted class names

--- a/index.html
+++ b/index.html
@@ -193,10 +193,10 @@
 
     <!-- Final screen -->
     <section class="screen" id="final-screen">
-      <div class="challenge-container">
-        <h1>Grattis du klarade det!</h1>
-        <div class="challenge-image">🎉</div>
-        <p>Du har genomfört hela träningsrundan!</p>
+      <div class="final-container">
+        <h1 class="bold">Bra jobbat!<br>Du är klar med rundan!</h1>
+        <div><img src="/assets/trophy_gif.gif" alt="Moving image with trophy and fireworks" class= "final-image"></div>
+        <div class="final-time-container"></div>
         <button class="challenge-done-btn" id="home-btn">Startsidan</button>
       </div>
     </section>
