--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           </div>
 
           <div class="create-route-button-container">
-            <button id="start-tracking">Skapa rutt</button>
+            <button id="start-tracking">Starta</button>
           </div>
 
         </div>
@@ -179,8 +179,8 @@
           <p id="challenge-text">Gör övningen enligt instruktionen</p>
         </div>
 
-        <div class="challenge-image" id="challenge-image">
-          <img src="/" alt="">
+        <div class="challenge-image-container" id="challenge-image">
+          <img src="/" alt="" class="challenge-image">
         </div>
 
         <div class="challenge-actions">
@@ -197,7 +197,7 @@
         <h1 class="bold">Bra jobbat!<br>Du är klar med rundan!</h1>
         <div><img src="/assets/trophy_gif.gif" alt="Moving image with trophy and fireworks" class= "final-image"></div>
         <div class="final-time-container"></div>
-        <button class="challenge-done-btn" id="home-btn">Startsidan</button>
+        <button class="challenge-done-btn" id="home-btn">Avsluta</button>
       </div>
     </section>
 
