--- a/index.html
+++ b/index.html
@@ -65,8 +65,11 @@
     <!-- Start screen -->
     <section class="screen active" id="start-screen">
       <div id="start-screen-container">
+
         <div class="selection-wrapper">
+
           <h1 class="bold center">Anpassa träningsrunda</h1>
+
           <!-- Time selection -->
           <div class="time-container">
             <h2>Välj träningstid</h2>
@@ -136,11 +139,11 @@
       </div>
     </section>
 
-    <!-- Map screen - Updated to match design -->
+    <!-- Map screen -->
     <section class="screen" id="map-screen">
       <div class="map-screen-container">      
 
-        <!-- Time -->
+        <!-- Timer -->
         <div class="timer-container">
           <span class="timer">00:00</span>
         </div>
@@ -167,23 +170,28 @@
     <!-- Challenge screen -->
     <section class="screen" id="challenge-screen">
       <div class="challenge-container">
-        <!-- Timer at the top of challenge screen -->
+
+        <!-- Timer -->
         <div class="challenge-timer-container">
           <span class="challenge-timer">00:00</span>
         </div>
         
+        <!-- Challenge title -->
         <div class="challenge-header">
           <h1 id="challenge-title" class="bold"></h1>
         </div>
 
+        <!-- Challenge description -->
         <div class="challenge-description">
           <p id="challenge-text">Gör övningen enligt instruktionen</p>
         </div>
 
+        <!-- Image container -->
         <div class="challenge-image-container" id="challenge-image">
           <img src="/" alt="" class="challenge-image">
         </div>
 
+        <!-- Challenge actions -->
         <div class="challenge-actions">
           <p>När du har utfört övningen, tryck på “Klar”</p>
           <button class="challenge-done-btn" id="done-btn">Klar</button>
@@ -195,10 +203,15 @@
     <!-- Final screen -->
     <section class="screen" id="final-screen">
       <div class="final-container">
+
         <h1 class="bold">Bra jobbat!<br>Du är klar med rundan!</h1>
+
         <div><img src="/assets/trophy_gif.gif" alt="Moving image with trophy and fireworks" class= "final-image"></div>
+
         <div class="final-time-container"></div>
+
         <button class="challenge-done-btn" id="home-btn">Avsluta</button>
+
       </div>
     </section>
 
