--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <link rel="icon" type="image/x-icon" href="/assets/tab_icon.png">
 
-    <link rel="stylesheet" href="/styles/main-styles.css" />
+    <link rel="stylesheet" href="/styles/global-styles.css" />
     <link rel="stylesheet" href="styles/styles.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
