rotate now works on map

--- a/index.html
+++ b/index.html
@@ -233,9 +233,10 @@
 </div>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.min.js"></script>
+    <script src="https://unpkg.com/leaflet-rotate/dist/leaflet-rotate.js"></script>
     <script type="module" src="scripts/script.js"></script>
     <script type="module" src="scripts/map-screen.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.min.js"></script>
+
 
   </body>
 </html>
